--- a/uloha_2/assets/css/style.css
+++ b/uloha_2/assets/css/style.css
@@ -15,6 +15,8 @@ h2 {
     padding-top: 20px;
 }
 
+.intro{text-align: center;}
+
 
 .serif { font-family: "Times New Roman", serif; }
 .sans { font-family: Arial, sans-serif; }
@@ -31,7 +33,7 @@ h2 {
 .bold { font-weight: 700; }
 .extra-bold { font-weight: 900; }
 
-
+.normal-style {font-style: normal;}
 .italic { font-style: italic; }
 .oblique { font-style: oblique; }
 
@@ -54,8 +56,12 @@ h2 {
 
 
 .letter-small { letter-spacing: -1px; }
+.letter-normal { letter-spacing: 0px; }
 .letter-big { letter-spacing: 5px; }
-.word-big { word-spacing: 10px; }
+.letter-extra-big{ letter-spacing: 10px;}
+
+.word-normal{ word-spacing: 0px;}
+.word-big{ word-spacing: 10px;}
 
 
 .upper { text-transform: uppercase; }
@@ -87,12 +93,14 @@ h2 {
     font-style: italic;
     text-align: center;
     color: green;
+    word-spacing: 10px;
 }
 
 .combo-three {
-    font-size: 12px;
+    text-transform: lowercase;
     color: red;
     font-family: monospace;
+    text-decoration: underline;
 }
 
 
